[package]
name = "ric-dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = "1.0.5"
inquire = "0.6.2"
rayon = "1.7.0"
reqwest = { version = "0.11.17", features = ["blocking"] }
url = "2.3.1"
